--- a/Presentation/Presentation.Web/ClientApp/app/home/home.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="mdl-grid">
     <div>
-        <latest-challenges></latest-challenges>
+        <latest-challenges [challengesCount]="challengesCount"></latest-challenges>
     </div>
 </div>
