--- a/Presentation/Presentation.Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Presentation.Web/Views/Shared/_Actions.cshtml
@@ -17,7 +17,8 @@
             getUserName: '@Url.Action("GetUserName", "Account")'
         },
         home: {
-            getChallenges: '@Url.Action("GetChallenges", "Challenges")'
+            getChallenges: '@Url.Action("GetChallenges", "Challenges")',
+            getChallengesCount: '@Url.Action("GetChallengesCount", "Challenges")'
         }
     }
 
