--- a/Presentation/Presentation.Web/ClientApp/app/home/challenges/challenges.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/challenges/challenges.component.html
@@ -5,6 +5,9 @@
 
     <div class="mdl-grid mdl-cell--12-col" *ngIf="challengesLoaded">
         <challenge-card class="mdl-cell--4-col" *ngFor="let challenge of challenges | paginate: config" [challenge]="challenge"></challenge-card>
-        <paginator (pageChange)="changePage($event)"></paginator>
+        <!--<paginator (pageChange)="changePage($event)"></paginator>-->
+        <div class="mdl-cell--12-col">
+            <pagination-controls [id]="config.id" (pageChange)="changePage($event)"></pagination-controls>
+        </div>
     </div>
 </div>
