--- a/Presentation/Presentation.Web/ClientApp/app/shared/shared-components/paginator.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/shared/shared-components/paginator.component.html
@@ -1,4 +1,4 @@
-<pagination-template #p="paginationApi"
+<!--<pagination-template #p="paginationApi"
                      [id]="config.id"
                      (pageChange)="config.currentPage = $event">
 
@@ -21,8 +21,8 @@
         </div>
     </div>
 
-</pagination-template>
+</pagination-template>-->
 
-<!--<div class="mdl-cell--12-col">
+<div class="mdl-cell--12-col">
     <pagination-controls (pageChange)="pageChange($event)"></pagination-controls>
-</div>-->
+</div>
