--- a/Presentation/Presentation.Web/ClientApp/app/app.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.html
@@ -1,7 +1,7 @@
 <mdl-layout mdl-layout-fixed-header mdl-layout-fixed-drawer>
     <mdl-layout-header class="mdl-color--grey-100 mdl-color-text--grey-600">
         <mdl-layout-header-row>
-            <mdl-layout-title>I lav angular 2</mdl-layout-title>
+            <mdl-layout-title>Challenging Challenges</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
             <mdl-textfield type="text" icon="search"></mdl-textfield>
          </mdl-layout-header-row>
