--- a/Presentation/Presentation.Web/ClientApp/app/home/home.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/home.component.html
@@ -1,5 +1,15 @@
 <div class="mdl-grid">
     <div>
         <latest-challenges [challengesCount]="challengesCount"></latest-challenges>
+        <popular-challenges [challengesCount]="challengesCount"></popular-challenges>
+        <unsolved-challenges [challengesCount]="challengesCount"></unsolved-challenges>
+    </div>
+    <div class="mdl-grid mdl-cell mdl-cell--12-col">
+        <div class="mdl-cell mdl-cell--6-col">
+            TAGS
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <top-users></top-users>
+        </div>
     </div>
 </div>
