--- a/Presentation/Presentation.Web/ClientApp/app/navmenu/navmenu.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/navmenu/navmenu.component.html
@@ -5,8 +5,8 @@
         (click)="onNavigated()">Главная</a>
     <a class="mdl-navigation__link" 
         [routerLinkActive]="['mdl-color--light-green-400']" 
-        [routerLink]="['/counter']"
-        (click)="onNavigated()">Counter</a>
+        [routerLink]="['/challenges']"
+        (click)="onNavigated()">Задачи</a>
     <auth (onNavigated)="onNavigated()"></auth>
 </nav>
 
