--- a/Presentation/Presentation.Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Presentation.Web/Views/Shared/_Actions.cshtml
@@ -18,7 +18,12 @@
         },
         home: {
             getChallenges: '@Url.Action("GetChallenges", "Challenges")',
-            getChallengesCount: '@Url.Action("GetChallengesCount", "Challenges")'
+            getChallengesCount: '@Url.Action("GetChallengesCount", "Challenges")',
+            getTopUsers: '@Url.Action("GetTopUsers", "Home")',
+            getTags: '@Url.Action("GetTags", "Home")'
+        },
+        challenges: {
+            searchChallenges: '@Url.Action("Search", "Challenges")'
         }
     }
 
