--- a/Presentation/Presentation.Web/Views/Shared/_Scripts.cshtml
+++ b/Presentation/Presentation.Web/Views/Shared/_Scripts.cshtml
@@ -2,6 +2,7 @@
 
 @Html.Partial("_Actions")
 
+<link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-amber.min.css" />
 
