--- a/Presentation/Presentation.Web/ClientApp/app/home/challenges/challenge-card.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/challenges/challenge-card.component.html
@@ -7,7 +7,7 @@
         <markdown [data]="challenge.previewText"></markdown>
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-        <button mdl-button mdl-colored mdl-ripple translate>Open</button>
+        <button mdl-button mdl-colored mdl-ripple>{{'Home.Open' | translate:lang}}</button>
     </mdl-card-actions>
     <mdl-card-menu>
         <button mdl-button mdl-button-type="icon" (click)="showAditionalInfo()" mdl-ripple>
