--- a/Presentation/Presentation.Web/ClientApp/app/home/challenges/challenges.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/challenges/challenges.component.html
@@ -1,10 +1,10 @@
 ﻿<div class="mdl-grid mdl-cell--12-col">
-    <h3 class="home-challenges-section__title">{{componentTitle}}</h3>
+    <h3 class="home-challenges-section__title">{{componentTitleId | translate:lang}}</h3>
     
     <loading-spinner style="margin-top: 60px" [active]="loadingSpinnerActive()"></loading-spinner>
 
-    <div class="mdl-grid mdl-cell--12-col" *ngIf="challengesLoaded">
-        <challenge-card class="mdl-cell--4-col" *ngFor="let challenge of challenges | paginate: config" [challenge]="challenge"></challenge-card>
+    <div class="mdl-grid mdl-cell--12-col" *ngIf="!challengesCountLoading">
+        <challenge-card class="mdl-cell--4-col" *ngFor="let challenge of challenges | async | paginate: config" [challenge]="challenge"></challenge-card>
         <!--<paginator (pageChange)="changePage($event)"></paginator>-->
         <div class="mdl-cell--12-col">
             <pagination-controls [id]="config.id" (pageChange)="changePage($event)"></pagination-controls>
