--- a/Presentation/Presentation.Web/ClientApp/app/app.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.html
@@ -4,6 +4,7 @@
             <mdl-layout-title>Challenging Challenges</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
             <mdl-textfield type="text" icon="search"></mdl-textfield>
+            <mdl-icon-toggle mdl-ripple [(ngModel)]="languageChanged" (click)="toggleLanguage(vasd)">translate</mdl-icon-toggle>
          </mdl-layout-header-row>
     </mdl-layout-header>
     <mdl-layout-drawer>
@@ -12,12 +13,6 @@
 
     <mdl-layout-content>
         <router-outlet></router-outlet>
-        <h3>{{ 'Title' | translate:lang }}</h3>
-
-        <h3>{{ 'Change language' | translate:lang }}</h3>
-
-        <button (click)="selectLanguage('en');">English</button>
-        <button (click)="selectLanguage('ru');">Russsss</button>
     </mdl-layout-content>
 </mdl-layout>
 
