--- a/Presentation/Presentation.Web/ClientApp/app/app.component.css
+++ b/Presentation/Presentation.Web/ClientApp/app/app.component.css
@@ -21,7 +21,7 @@
     visibility: visible;
 }
 
-.mdl-select--floating-label.ng-dirty .mdl-textfield__label {
+.mdl-select--floating-label .mdl-textfield.is-dirty .mdl-textfield__label {
     color: rgb(139,195,74);
     font-size: 12px;
     top: 4px;
