--- a/Presentation/Presentation.Web/ClientApp/app/challenges/challenges.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/challenges/challenges.component.html
@@ -1,34 +1,8 @@
+<filters [(searchType)]="selectedSearchType" [(searchString)]="searchString" (changeFilter)="changeFilter()"></filters>
 <div class="mdl-grid">
-  <div mdl-shadow="4" class="mdl-grid mdl-cell mdl-cell--12-col mdl-padded">
-    <div class="mdl-cell mdl-cell--3-col">
-            <!-- multiple="true" (change)="onSearchTypesChange(selectedSearchTypes)"-->
-      <mdl-select [(ngModel)]="selectedSearchType" floating-label placeholder="{{ 'SearchField' | translate:lang }}">
-        <!--<mdl-option [value]="allType"><em>Все</em></mdl-option>-->
-        <mdl-option *ngFor="let type of searchTypes" [value]="type.type">{{type.name}}</mdl-option>
-      </mdl-select>
-    </div>
-    <div class="mdl-cell mdl-cell--6-col">
-      <mdl-textfield
-        class="full-width"
-        type="text"
-        floating-label
-        label="Ключевое слово"
-        [(ngModel)]="searchString"
-        autofocus></mdl-textfield>
-    </div>
-    <div class="mdl-cell mdl-cell--3-col button-cell">
-      <button [disabled]="isLoading" mdl-button mdl-button-type="raised" mdl-colored="primary" (click)="searchChallenges()">
-        <mdl-icon>search</mdl-icon>
-        Поиск
-      </button>
-      <button class="add-challenge-button" mdl-button mdl-button-type="raised" mdl-colored="accent">
-        <mdl-icon>add</mdl-icon>
-        Создать задачу
-      </button>
-    </div>
-  </div>
-  <div class="mdl-grid mdl-cell mdl-cell--12-col">
-      <loading-spinner [active]="isLoading"></loading-spinner>
-
-  </div>
+    <loading-spinner [active]="isLoading"></loading-spinner>
+    <challenge mdl-shadow="4" class="mdl-cell mdl-cell--12-col" 
+      *ngFor="let challenge of challenges | async" [challenge]="challenge"></challenge>
+    <button [disabled]="!nextPageEnabled" (click)="nextPage()">Next</button>
+    <button [disabled]="!previousPageEnabled" (click)="previousPage()">Prev</button>
 </div>
