--- a/Presentation/Presentation.Web/ClientApp/app/home/top-users/top-users.component.html
+++ b/Presentation/Presentation.Web/ClientApp/app/home/top-users/top-users.component.html
@@ -1,5 +1,5 @@
 <loading-spinner [active]="!usersLoaded"></loading-spinner>
 <!--<mdl-table *ngIf="usersLoaded" mdl-shadow="4" [table-model]="users"></mdl-table>-->
-<ngx-datatable (activate)="openUserProfile($event)" [hidden]="!usersLoaded" class="material"
+<ngx-datatable (activate)="openUserProfile($event)" [hidden]="!usersLoaded" class="material striped"
         [headerHeight]="40"
         [rowHeight]="40"></ngx-datatable>
