fixed legacy project

--- a/Presentation/Legacy/Views/Account/Register.cshtml
+++ b/Presentation/Legacy/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Shared.Framework.Resources
-@model Challenging_Challenges.Models.ViewModels.RegisterViewModel
+@model Presentation.Legacy.Models.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = Localization.Register;
     Layout = null;
