--- a/Presentation/Legacy/Views/Challenges/Delete.cshtml
+++ b/Presentation/Legacy/Views/Challenges/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@using Challenging_Challenges.Helpers
+﻿@using Presentation.Legacy.Helpers
 @using Shared.Framework.Resources
 @model Business.Challenges.ViewModels.ChallengeViewModel
 
