--- a/Presentation/Legacy/Views/Home/Index.cshtml
+++ b/Presentation/Legacy/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@using Challenging_Challenges.Enums
+﻿@using Presentation.Legacy.Enums
 @using Shared.Framework.Resources
-@model Challenging_Challenges.Models.ViewModels.HomeChallengeViewModel
+@model Presentation.Legacy.Models.ViewModels.HomeChallengeViewModel
 
 @{
     ViewBag.Title = "Challenging Challenges";
