--- a/Presentation/Legacy/Views/Home/_ChallengesPartial.cshtml
+++ b/Presentation/Legacy/Views/Home/_ChallengesPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using Challenging_Challenges.Helpers
+﻿@using Presentation.Legacy.Helpers
 @using PagedList.Mvc
 @model PagedList.IPagedList<Business.Challenges.ViewModels.ChallengesDescriptionViewModel>
 
