--- a/Presentation/Legacy/Views/Manage/ChangePassword.cshtml
+++ b/Presentation/Legacy/Views/Manage/ChangePassword.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Shared.Framework.Resources
-@model Challenging_Challenges.Models.ViewModels.ChangePasswordViewModel
+@model Presentation.Legacy.Models.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = Localization.ChangePassword;
 }
