--- a/Presentation/Legacy/Views/Account/Login.cshtml
+++ b/Presentation/Legacy/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Shared.Framework.Resources
-@model Challenging_Challenges.Models.ViewModels.LoginViewModel
+@model Presentation.Legacy.Models.ViewModels.LoginViewModel
 @{
     Layout = null;
     ViewBag.Title = Localization.LogIn;
