removed wrong parameter

--- a/Presentation/Web/ClientApp/app/app.component.html
+++ b/Presentation/Web/ClientApp/app/app.component.html
@@ -4,7 +4,7 @@
             <mdl-layout-title>Challenging Challenges</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
             <mdl-textfield type="text" icon="search"></mdl-textfield>
-            <mdl-icon-toggle mdl-ripple [(ngModel)]="languageChanged" (click)="toggleLanguage(vasd)">translate</mdl-icon-toggle>
+            <mdl-icon-toggle mdl-ripple [(ngModel)]="languageChanged" (click)="toggleLanguage()">translate</mdl-icon-toggle>
          </mdl-layout-header-row>
     </mdl-layout-header>
     <mdl-layout-drawer>
