--- a/Presentation/Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Web/Views/Shared/_Actions.cshtml
@@ -20,7 +20,7 @@
             getChallenges: '@Url.Action("GetChallenges", "Challenges")',
             getChallengesCount: '@Url.Action("GetChallengesCount", "Challenges")',
             getTopUsers: '@Url.Action("GetTopUsers", "Home")',
-            getTags: '@Url.Action("GetTags", "Home")'
+            getPopularTags: '@Url.Action("GetPopularTags", "Home")'
         },
         challenges: {
             searchChallenges: '@Url.Action("Search", "Challenges")'
