--- a/Presentation/Web/ClientApp/app/auth/login/login-dialog.component.html
+++ b/Presentation/Web/ClientApp/app/auth/login/login-dialog.component.html
@@ -1,19 +1,21 @@
-<h3 class="mdl-dialog__title">Вход</h3>
+<h3 class="mdl-dialog__title" translate>Auth.LoginDialogTitle</h3>
 <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="mdl-dialog__content">
         <mdl-textfield-validated [formControl]="loginForm.controls.userName"
-                    label="Имя пользователя"
+                    label="{{ 'Auth.UserName' | translate:lang }}"
                     name="userName"
                     type="text"
                     floating-label></mdl-textfield-validated>
         <mdl-textfield-validated [formControl]="loginForm.controls.password"
-                    label="Пароль"
+                    label="{{ 'Auth.Password' | translate:lang }}"
                     name="password"
                     type="password"
                     floating-label></mdl-textfield-validated>
     </div>
     <div class="mdl-dialog__actions">
-        <button mdl-button [disabled]="!loginForm.valid" type="submit" mdl-button-type="raised" mdl-colored="primary" mdl-ripple>Войти</button>
-        <button mdl-button type="button" (click)="cancel()">Отмена</button>
+        <button mdl-button [disabled]="!loginForm.valid" type="submit"
+                mdl-button-type="raised" mdl-colored="primary" mdl-ripple
+                translate>Auth.Login</button>
+        <button mdl-button type="button" (click)="cancel()" translate>Common.Cancel</button>
     </div>
 </form>
