Added badges, working on redirects.

--- a/Presentation/Web/ClientApp/app/challenges/challenge/challenge.component.html
+++ b/Presentation/Web/ClientApp/app/challenges/challenge/challenge.component.html
@@ -6,11 +6,32 @@
         <markdown [data]="challenge.previewText"></markdown>
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-        <button mdl-button mdl-colored mdl-ripple>{{'Home.Open' | translate:lang}}</button>
+        <mdl-chip (click)="searchBySection(challenge.section)" mdl-label="{{challenge.section | enum:'section' | translate:lang }}"></mdl-chip>
+        <mdl-chip mdl-label="{{ 'Rating' | translate:lang }}">
+            <span *ngIf="challenge.rating >= 4.5" mdl-chip-contact class="mdl-color--primary mdl-color-text--white">A+</span>
+            <span *ngIf="challenge.rating < 4.5 && challenge.rating >= 4" mdl-chip-contact class="mdl-color--light-green-300 mdl-color-text--white">A</span>
+            <span *ngIf="challenge.rating < 4 && challenge.rating >= 3" mdl-chip-contact class="mdl-color--lime-500 mdl-color-text--white">B+</span>
+            <span *ngIf="challenge.rating < 3 && challenge.rating >= 2" mdl-chip-contact class="mdl-color--yellow-600 mdl-color-text--white">B</span>
+            <span *ngIf="challenge.rating < 2 && challenge.rating >= 1" mdl-chip-contact class="mdl-color--red-400 mdl-color-text--white">C</span>
+            <span *ngIf="challenge.rating < 1 && challenge.rating > 0" mdl-chip-contact class="mdl-color--red-800 mdl-color-text--white">D</span>
+            <span *ngIf="challenge.rating === 0" mdl-chip-contact class="mdl-color-text--white">0</span>
+        </mdl-chip>
+        <mdl-chip mdl-label="{{challenge.difficulty | enum:'difficulty' | translate:lang }}"></mdl-chip>
+        <mdl-chip mdl-label="{{challenge.language | enum:'language' | translate:lang }}"></mdl-chip>
+        <button *ngFor="let tag of challenge.tags" class="tag-button" mdl-button [mdl-toggle-menu]="menu" mdl-ripple>{{tag}}</button>
     </mdl-card-actions>
     <mdl-card-menu>
-        <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
-            <mdl-icon>launch</mdl-icon> {{'Challenges.Open' | translate:lang}}
-        </button>
+        <div>
+            <button class="open-button" mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
+                <mdl-icon>launch</mdl-icon> {{'Challenges.Open' | translate:lang}}
+            </button>
+            <br>
+            <div *ngIf="challenge.timesSolved > 0">Solved 5 times</div>
+            <div *ngIf="challenge.timesSolved === 0">
+                {{ 'NotSolved' | translate:lang }}
+                <br>
+                {{ 'BeFirst' | translate:lang }}
+            </div>
+        </div>
     </mdl-card-menu>
 </mdl-card>
