--- a/Presentation/Web/ClientApp/app/challenges/filters/filters.component.html
+++ b/Presentation/Web/ClientApp/app/challenges/filters/filters.component.html
@@ -10,11 +10,11 @@
     floating-label
     label="{{ 'Keyword' | translate:lang }}"
     [(ngModel)]="searchString"
-    (keyup.enter)="changeFilter.emit()"
+    (keyup.enter)="submit()"
     autofocus></mdl-textfield>
 </div>
 <div class="mdl-cell mdl-cell--3-col button-cell">
-  <button mdl-button mdl-colored="primary" mdl-ripple (click)="changeFilter.emit()">
+  <button mdl-button mdl-colored="primary" mdl-ripple (click)="submit()">
     <mdl-icon>search</mdl-icon>
     {{ 'Search' | translate:lang }}
   </button>
