--- a/Presentation/Web/ClientApp/app/challenges/challenge/challenge.component.html
+++ b/Presentation/Web/ClientApp/app/challenges/challenge/challenge.component.html
@@ -22,7 +22,7 @@
     </mdl-card-actions>
     <mdl-card-menu>
         <div>
-            <button class="open-button" mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple
+            <button class="open-button" mdl-button mdl-button-type="raised" mdl-colored="primary"
                 (click)="openChallenge()">
                 <mdl-icon>launch</mdl-icon> {{'Challenges.Open' | translate:lang}}
             </button>
