Add answer submission.

--- a/Presentation/Web/ClientApp/app/challenge/challenge-details/challenge-actions/challenge-actions.component.html
+++ b/Presentation/Web/ClientApp/app/challenge/challenge-details/challenge-actions/challenge-actions.component.html
@@ -6,7 +6,7 @@
     <mdl-icon>build</mdl-icon>
     Edit
 </button>
-<button [routerLink]="['/challenges']" mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
+<button [routerLink]="['/challenges']" mdl-button mdl-button-type="raised" mdl-ripple>
     <mdl-icon>keyboard_arrow_left</mdl-icon>
-    To Challenge List
+    To Challenges List
 </button>
