--- a/Presentation/Web/Views/Shared/_Actions.cshtml
+++ b/Presentation/Web/Views/Shared/_Actions.cshtml
@@ -16,7 +16,8 @@
         },
         challenges: {
             searchChallenges: '@Url.Action("Search", "Challenges")',
-            getChallenge: '@Url.Action("GetChallenge", "Challenges")'
+            getChallenge: '@Url.Action("GetChallenge", "Challenges")',
+            solve: '@Url.Action("Solve", "Challenges")'
         }
     }
 
