Localize validation messages.

--- a/Presentation/Web/ClientApp/app/challenges/filters/filters.component.html
+++ b/Presentation/Web/ClientApp/app/challenges/filters/filters.component.html
@@ -21,7 +21,7 @@
     <mdl-icon>search</mdl-icon>
     {{ 'Search' | translate:lang }}
   </button>
-  <button mdl-button mdl-ripple mdl-colored="accent">
+  <button [routerLink]="['/challenge/new']" mdl-button mdl-ripple mdl-colored="accent">
     <mdl-icon>add</mdl-icon>
     {{ 'CreateChallenge' | translate:lang }}
   </button>
